<resources>
    <string name="app_name">ProjetoApollo</string>
    <!-- Botão xml -->
    <string name="nomeApp">Apollo</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Cadastre-se</string>
    <!-- Texto xml -->
    <string name="publico">Público</string>
    <string name="artista">Artista</string>
    <string name="insira_seu_email">Insira seu email</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <!-- Tela inscrição xml -->
    <string name="nomeUsuario">Nome Completo:</string>
    <string name="nomeLogin">Login:</string>
    <string name="nomeEmail">E-mail:</string>
    <string name="nomeSenha">Senha:</string>
    <string name="nomeSenhaConfirmar">Confirmar senha:</string>
    <!-- Outros do xml -->
    <string name="recuperacao">Esqueceu a senha?</string>
    <string name="digiteNome">Digite seu nome</string>
    <string name="digiteLogin">Digite seu login</string>
    <string name="digiteEmail">Digite um email</string>
    <string name="digiteSenha">Digite uma senha</string>
    <string name="digiteSenhaNovam">Digite a senha novamente</string>
    <string name="cancelar">Cancelar</string>
    <string name="avancar">Avançar</string>
    <string name="title_aviso">Aviso</string>
    <string name="message_campos_invalido_branco">Há campos inválidos ou em branco!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="ex_vitor_messias">ex: Vitor Messias</string>
    <string name="local">Local</string>
    <string name="ex_proto_escrita_com_br">ex: proto-escrita.com.br</string>
    <string name="ex_visual_havest">ex: visual havest</string>
    <string name="cidade">Cidade</string>
    <string name="definir_cidade">Definir cidade</string>
    <string name="g_nero_musical">Gênero Musical</string>
    <string name="definir_estilo_musical">Definir estilo musical</string>
    <string name="instrumento_musical">Instrumento Musical</string>
    <string name="definir_instrumento">Definir instrumento</string>
    <string name="banda">Banda</string>
    <string name="solo">Solo</string>
    <string name="tipo_de_artista">Tipo de Artista</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="possui_equipamentos">Possui Equipamentos</string>
    <string name="ex_ambiente_descontraido">ex: ambiente descontraido</string>
    <string name="ex_mitos_e_lendas">ex: Mitos e lendas</string>
    <string name="nome_do_estabelecimento">Nome do Estabelecimento</string>
    <string name="bem_vindo_a_ao_apollo">Bem Vindo(a) ao Apollo!</string>
    <string name="todo">TODO</string>
    <string name="voc_gostaria_de_se_cadastrar_como">Você gostaria de se cadastrar como?</string>
    <string name="logo">logo</string>
    <string name="alternativo">Alternativo</string>
    <string name="reggae">Reggae</string>
    <string name="funk">Funk</string>
    <string name="pop">Pop</string>
    <string name="metal">Metal</string>
    <string name="eletronica">Eletronica</string>
    <string name="rap">Rap</string>
    <string name="blues">Blues</string>
    <string name="jazz">Jazz</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="sertanejo">Sertanejo</string>
    <string name="rock">Rock</string>
    <string name="cavaquinho">Cavaquinho</string>
    <string name="sampler">Sampler</string>
    <string name="sanfona">Sanfona</string>
    <string name="saxofone">Saxofone</string>
    <string name="violino">Violino</string>
    <string name="ukulele">Ukulele</string>
    <string name="baixo">Baixo</string>
    <string name="bateria">Bateria</string>
    <string name="vocal">Vocal</string>
    <string name="teclado">Teclado</string>
    <string name="guitarra">Guitarra</string>
    <string name="viol_o">Violão</string>
    <string name="clique_duas_vezes_ou_escreva">clique duas vezes ou escreva</string>
    <string name="visual_harvest">visual harvest</string>
    <string name="proto_escrita_tumblr_com">proto-escrita.tumblr.com/</string>
    <string name="_1_540_followers">1,540 Followers</string>
    <string name="_1_540_following">1,540 Following</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="vitor_messias">Vítor Messias</string>
    <string name="mitos_e_lendas">Mitos e Lendas</string>
    <string name="_1_rock_bar_do_parque_am_rica_que_fica_a_5_minutos_do_terminal_graja_ambiente_descontra_do_e_decora_o_singular_com_diversos_posters_e_capa_de_revistas_da_d_cada_de_70_80_90_e_2000_onde_se_ouve_e_v_o_bom_e_velho_rock_and_roll">1° Rock Bar do Parque América que fica a 5 minutos do Terminal Grajaú. Ambiente descontraído e decoração singular com diversos posters e capa de revistas da década de 70/80/90 e 2000, onde se ouve e vê o bom e velho Rock and Roll.</string>
    <string name="logofacebook">logoFacebook</string>
    <string name="logoinstagram">logoInstagram</string>
    <string name="telefone">telefone</string>
    <string name="sao_paulo_sp">São Paulo, SP</string>
    <string name="opcoes">Opções</string>
    <string name="foto">Foto</string>
    <string name="musica">musica</string>
    <string name="mensagem">mensagem</string>
    <string name="fav">fav</string>
    <string name="mudar_imagem">mudar imagem</string>
    <string name="sair">Sair</string>
    <string name="favorito">Favorito</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="samba">Samba</string>
    <string name="mais">Mais+</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="lupa">lupa</string>
    <string name="buscar">Buscar</string>
    <string name="robert_taylor">Robert Taylor</string>
    <string name="gustavo_araujo">Gustavo Araujo</string>
    <string name="yasmin_luize">Yasmin Luize</string>
    <string name="michaelle_louise">Michaelle Louise</string>
    <string name="seja_bem_vindo">Seja bem-vindo!</string>
    <string name="voc_recebeu_uma_mensagem">Você recebeu uma mensagem.</string>
    <string name="gustavo_ara_jo_come_ou_a_seguir_voc">Gustavo Araújo começou a seguir você.</string>
    <string name="seu_evento_est_pr_ximo">Seu evento está próximo.</string>
    <string name="vitor_messias_postou_uma_foto">Vitor Messias postou uma foto.</string>
    <string name="robert_taylor_come_ou_a_seguir_voc">Robert Taylor começou a seguir você.</string>
    <string name="explorar">Explorar</string>
    <string name="favoritos">Favoritos</string>
    <string name="inicio">Inicio</string>
    <string name="notifica_es">Notificações</string>
    <string name="inscricoes">Inscrições</string>
    <string name="system_club">System Club</string>
    <string name="site">Site</string>
    <string name="sobre">Sobre</string>
    <string name="nome">Nome</string>
</resources>