<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plano_de_fundo_app"
    android:orientation="vertical"
    tools:context=".TelaArtistaPublico_Activity">

    <TextView
        android:id="@+id/txtPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/voc_gostaria_de_se_cadastrar_como"
        android:textSize="30sp"
        android:textStyle="bold|normal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="219dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </LinearLayout>

    <Button
        android:id="@+id/btnArtista"
        style="?android:attr/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/borda_botao_cor"
        android:hint="@string/artista"
        android:onClick="abrirJanelaArtista"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnPublico"
        style="?android:attr/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/borda_botao_cor"
        android:hint="@string/publico"
        android:onClick="abrirJanelaPublico"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic" />
</LinearLayout>